<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.ChangePasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:src="@drawable/back_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/red" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="start|fill_vertical"
                android:text="Change password"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ticketBtn"
                app:layout_constraintStart_toEndOf="@id/backBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ticketBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:src="@drawable/ticket"
                app:tint="@color/red"
                app:layout_constraintEnd_toStartOf="@+id/menuBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                android:id="@+id/menuBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:src="@drawable/menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/red" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbarThumbVertical="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutOldPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/hint_old_password"
                        android:textColorHint="@color/greytext"
                        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Filled"
                        app:boxBackgroundColor="@color/white"
                        app:boxBackgroundMode="filled"
                        app:boxCollapsedPaddingTop="8dp"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeErrorColor="@color/red"
                        app:cursorColor="@color/black"
                        app:cursorErrorColor="@color/red"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/greytext"
                        app:errorIconTint="@color/red"
                        app:errorTextColor="@color/red"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextOldPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text|textPassword"
                            android:paddingTop="25dp"
                            android:paddingBottom="8dp"
                            android:singleLine="true"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/hint_new_password"
                        android:textColorHint="@color/greytext"
                        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Filled"
                        app:boxBackgroundColor="@color/white"
                        app:boxBackgroundMode="filled"
                        app:boxCollapsedPaddingTop="8dp"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeErrorColor="@color/red"
                        app:cursorColor="@color/black"
                        app:cursorErrorColor="@color/red"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/greytext"
                        app:errorIconTint="@color/red"
                        app:errorTextColor="@color/red"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/inputLayoutOldPassword">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextNewPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text|textPassword"
                            android:paddingTop="25dp"
                            android:paddingBottom="8dp"
                            android:singleLine="true"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/hint_confirm_password"
                        android:textColorHint="@color/greytext"
                        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Filled"
                        app:boxBackgroundColor="@color/white"
                        app:boxBackgroundMode="filled"
                        app:boxCollapsedPaddingTop="8dp"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeErrorColor="@color/red"
                        app:cursorColor="@color/black"
                        app:cursorErrorColor="@color/red"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/greytext"
                        app:errorIconTint="@color/red"
                        app:errorTextColor="@color/red"
                        app:hintTextColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/inputLayoutNewPassword">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text|textPassword"
                            android:paddingTop="25dp"
                            android:paddingBottom="8dp"
                            android:singleLine="true"
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:text="@string/hint_notice"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/inputLayoutConfirmPassword" />

                    <Button
                        android:id="@+id/saveBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:backgroundTint="@color/red"
                        android:fontFamily="sans-serif-medium"
                        android:text="Change password"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>